# gkvp_f0.48

./: .gitignore  README.md  README_for_namelist.txt  Version_memo.txt
extra_tools/backup/diag_old/: Makefile  go.diag  v17diag.f90
extra_tools/backup/diag_old/backup/: diagnostics_note.txt  v13diag.f90  v14diag.f90  v15diag.f90  v16diag.f90
extra_tools/backup/diag_old/backup/old/: v01reduce.f90  v09diag.f90  v10diag.f90  v11diag.f90  v12diag.f90
extra_tools/backup/diag_old/backup/sample/backup/: analysis_note.txt  v00analysis.f90  v01analysis.f90  v02analysis.f90  v03analysis.f90  v04analysis.f90  v05analysis.f90  v06analysis.f90  v07analysis.f90  v08analysis.f90
extra_tools/backup/diag_old/backup/sample/backup/for_gkv.t/: analysis_note.txt  v05analysis.f90  v06analysis.f90  v07analysis.f90  v08analysis.f90  v09analysis.f90  v10analysis.f90  v11analysis.f90
extra_tools/backup/diag_old/backup/sample/jobscripts/: go.analysis_bx  go.analysis_fx10  go.analysis_helios  go.analysis_k
extra_tools/backup/diag_old/backup/sample/makefiles/: Makefile_bx  Makefile_fx10  Makefile_helios
extra_tools/backup/diag_old/jobscripts/: go.diag_bx  go.diag_fx10  go.diag_k  go.diag_k_ppb
extra_tools/backup/diag_old/makefiles/: Makefile_bx  Makefile_helios  Makefile_k
extra_tools/backup/diag_old/reduction/backup/: makegn.csh  makegn_xytime.awk  makegn_ztime.awk  reduction.awk  reduction_1d.awk  reduction_ty2y.awk  reduction_xy2x.awk  reduction_xy2y.awk  reduction_xyz2xy.awk
extra_tools/backup/diag_old/trans_vtk/: gkv2cartesian.awk  gkv2cartesian.sh  gkv2full.sh  gkv2full1.awk  gkv2full1_surf.awk  gkv2full2.awk  gkv2full2_surf.awk  gkv2full_surf.sh  set_spacing.sh
extra_tools/backup/fig_1sp/: make_pdf.csh
extra_tools/backup/fig_1sp/pdf/: fig.tex
extra_tools/backup/fig_1sp/src/: calc_elt.sh  calc_entropybalance.awk  plot_freq.gn  plot_teint.gn  plot_teint.nz.gn  plot_teint.zf.gn  plot_teng.gn  plot_tent.0.gn  plot_tent.0.nz.gn  plot_tent.0.zf.gn  plot_tent.gn
extra_tools/backup/fig_1sp/src/old/: calc_entropybalance.awk_old  calc_entropybalance_itgae.awk  calc_tentropy.awk  plot_conservation.gn  plot_entropybalance.gn_old  plot_hhinkxky.gn  plot_hhinz.gn  plot_omega.gn  plot_phiky_reomega.gn  plot_tent.gn
extra_tools/backup/fig_2sp/: make_pdf.csh
extra_tools/backup/fig_2sp/pdf/: fig.tex
extra_tools/backup/fig_2sp/src/: calc_elt.sh  calc_entropybalance.awk  plot_elt.gn  plot_grow.gn  plot_tdtc.gn  plot_teint.gn  plot_teint.nz.gn  plot_teint.zf.gn  plot_tent.0.gn  plot_tent.0.nz.gn  plot_tent.0.zf.gn  plot_tent.1.gn  plot_tent.1.nz.gn  plot_tent.1.zf.gn  plot_tent.gn  plot_tmen.gn  plot_tmint.gn  plot_tmint.nz.gn  plot_tmint.zf.gn
extra_tools/backup/fig_2sp/src/old/: calc_Eky_lgrowth.awk  calc_alfven.awk  calc_alfven2.awk  calc_phiky_reomega.awk  plot_Eky_lgrowth.gn  plot_dtc.gn  plot_entropybalance_itgae.gn  plot_hhinvm.gn  plot_phiinkxky.gn  plot_phiinz.gn  plot_tentropy.gn  plot_tphase.gn  sort_hhinvm.awk
extra_tools/backup/scripts/: chparam.sh  rename.sh  scan_ky.sh  scan_shatbeta.sh  shoot
run/: Makefile  gkvp_f0.48_namelist  shoot  sub.q
run/backup/: Makefile_helios  Makefile_k  Makefile_nu  Makefile_oakleaf  Makefile_ps  gkvp_f0.48_namelist  gkvp_f0.48_namelist_2sp  shoot_helios  shoot_k  shoot_nu  shoot_oakleaf  shoot_ps  sub.q_cnt_k  sub.q_helios  sub.q_init_k  sub.q_nu  sub.q_oakleaf  sub.q_ps
run/backup/old/: Makefile_helios  gkvp_f0.41_namelist.001_bx  gkvp_f0.41_namelist.001_fx10  gkvp_f0.41_namelist.001_helios  go.sh  shoot_old  sub.q_helios
run/backup/old/input_exp/: gkvp_r0.6_vmecin.f90  gkvp_r1.1_vmecin.f90  input-prof.r360q100b089a8020
run/backup/old/jobscripts/: sub.q_bx  sub.q_fx10  sub.q_helios  sub.q_k_cnt  sub.q_k_init
run/backup/old/makefiles/: Makefile_bx  Makefile_fx10  Makefile_helios  Makefile_k
run/backup/old/namelists/: gkvp_f0.30_namelist.001_bx  gkvp_f0.30_namelist.001_fx10  gkvp_f0.30_namelist.001_helios  gkvp_f0.30_namelist.001_k
run/backup/old/rankmapfiles/rankmap_1sp/: myrankmap_s2x2x2g2x2x2  myrankmap_s2x2x2g8x8x4  myrankmap_s2x2x4g8x8x4  myrankmap_s4x2x4g8x8x4  myrankmap_s4x4x2g8x8x4  myrankmap_s4x4x4g2x8x4  myrankmap_s4x4x4g4x8x4  myrankmap_s4x4x4g8x2x4  myrankmap_s4x4x4g8x4x4
run/backup/old/rankmapfiles/rankmap_2sp/: myrankmap_s1x1x2g8x8x2  myrankmap_s4x4x4g8x8x2
run/input_eqdsk/: plot_MC2D.gn  plot_METRIC.gn
src/: gkvp_f0.48_advnc.f90  gkvp_f0.48_bndry.f90  gkvp_f0.48_clock.f90  gkvp_f0.48_colli.f90  gkvp_f0.48_dtc.f90  gkvp_f0.48_exb.f90  gkvp_f0.48_fft_fftw.f90  gkvp_f0.48_fld.f90  gkvp_f0.48_freq.f90  gkvp_f0.48_header.f90  gkvp_f0.48_igs.f90  gkvp_f0.48_intgrl.f90  gkvp_f0.48_main.f90  gkvp_f0.48_mpienv.f90  gkvp_f0.48_out.f90  gkvp_f0.48_set.f90  gkvp_f0.48_tips.f90  gkvp_f0.48_trans.f90  gkvp_f0.48_vmecbzx.f90  gkvp_f0.48_zfilter.f90
