#!/usr/bin/gnuplot
#
#  Plot radial and poloidal profile of equilibrium quantities
#

input = 'igs_sample_nss21ntheta33/METRIC_axi.OUT' 
NPSI= 21      # Number for radial grid (See INPUT.DATA in IGS)
s_input = 0.5 # Diagnosed radial position (0<s_input<1)


set term x11 noenhanced

### rho-dependence ###
set xlabel 'Normalized minor radius rho'
set xrange [0:1]
set title input

set ylabel 'Safety factor q'
plot input every ::::0 u 1:3
pause -1

set ylabel 'Magnetic shear s_{hat}'
plot input every ::::0 u 1:4
pause -1

set ylabel 'Inverse aspect ratio eps_r'
plot input every ::::0 u 1:5
pause -1

set ylabel 'Squared magnetic field <B^2>'
plot input every ::::0 u 1:7
pause -1

### theta-dependence ###
set xlabel 'Poloidal anlgle theta'
set xrange [-pi:pi]
is0 = int(s_input*(NPSI-1)+0.5)+1
rho = (is0-1.0) / (NPSI-1.0)
set title input.sprintf(" (s_input=%.2f)(is0=%d,rho=%.2f)",s_input,is0,rho)

set ylabel 'Magnetic field strength B'
plot input every :::(is0-1)::(is0-1) u 2:6
pause -1

set ylabel 'dB/ds'
plot input every :::(is0-1)::(is0-1) u 2:26
pause -1

set ylabel 'dB/dtheta [B_{axis}]'
plot input every :::(is0-1)::(is0-1) u 2:27
pause -1

set ylabel 'Jacobian sqrt(g)'
plot input every :::(is0-1)::(is0-1) u 2:8
pause -1

set ylabel 'Metric g^{s,s}'
plot input every :::(is0-1)::(is0-1) u 2:15
pause -1

set ylabel 'Metric g^{s,theta}'
plot input every :::(is0-1)::(is0-1) u 2:16
pause -1

set ylabel 'Metric g^{s,zeta}'
plot input every :::(is0-1)::(is0-1) u 2:17
pause -1

set ylabel 'Metric g^{theta,theta}'
plot input every :::(is0-1)::(is0-1) u 2:18
pause -1

set ylabel 'Metric g^{theta,zeta}'
plot input every :::(is0-1)::(is0-1) u 2:19
pause -1

set ylabel 'Metric g^{zeta,zeta}'
plot input every :::(is0-1)::(is0-1) u 2:20
pause -1
