#!/usr/local/bin/gnuplot
  set terminal postscript eps enhanced color 14
  set output "./eps/teint.eps"
  set size 0.7,0.7
  set border
  set grid
  set key out
  set key box spacing 1.5 width +1
  set pointsize 0

  set xlabel "Time t v_{ref}/L_{ref}"
  set ylabel "Entropy variables [{/Symbol d}^2n_{ref}T_{ref}v_{ref}/L_{ref}]"
  set xrange [*:*]
  set yrange [*:*]

plot "./data/ent.0.dat" u 1:($4+$5) ti "dW/dt" lw 3 w l, \
                     "" u 1:(-$6-$7) ti "-R" lw 3 w l, \
                     "" u 1:($4+$5+$6+$7) ti "Error" lt -1 lw 1 w l

#  set terminal x11
#  set output
#  replot
#  pause -1
#EOF
