#!/usr/local/bin/gnuplot
  set terminal postscript eps enhanced color 14
  set output "./eps/tent.0.nz.eps"
  set size 0.7,0.7
  set border
  set grid
  set key out
  set key box spacing 1.5 width +0
  set pointsize 0

  set xlabel "Time t v_{ref}/L_{ref}"
  set ylabel "Entropy variables [{/Symbol d}^2n_{ref}T_{ref}v_{ref}/L_{ref}]"
  set xrange [*:*]
  set yrange [*:*]

plot "./data/ent.0.dat" u 1:2 ti "dS/dt^{(t)}" lw 3 w l, \
                     "" u 1:6 ti "R^{(t)}" lw 3 w l, \
                     "" u 1:8 ti "-I^{(z)}" lw 3 w l, \
                     "" u 1:12 ti "{/Symbol Q}/L_T" lw 3 w l, \
                     "" u 1:10 ti "D^{(t)}" lw 3 w l, \
                     "" u 1:($2-$6-$8-$10-$12) ti "Error" lt -1 lw 1 w l

#  set terminal x11
#  set output
#  replot
#  pause -1
#EOF
