#!/usr/local/bin/gnuplot
  set terminal postscript eps enhanced color 14
  set output "./eps/tent.eps"
  set size 1.0,0.7
  set border
  set grid
  set key out
  set key box spacing 1.5 width +0
  set pointsize 0

  set xlabel "Time t v_{ref}/L_{ref}"
  set ylabel "Entropy variables [{/Symbol d}^2n_{ref}T_{ref}v_{ref}/L_{ref}]"
  set xrange [*:*]
  set yrange [*:*]

plot "./data/ent.0.dat" u 1:($2+$3+$4+$5) ti "d(S+W)/dt" lw 3 w l, \
                     "" u 1:($12) ti "{/Symbol Q}/L_T" lw 3 w l, \
                     "" u 1:($10+$11) ti "D" lw 3 w l, \
                     "" u 1:($2+$3+$4+$5-$10-$11-$12) ti "Error" lt -1 lw 1 w l

#  set terminal x11
#  set output
#  replot
#  pause -1
#EOF
