#!/usr/local/bin/gnuplot
  set terminal postscript eps enhanced color 14
#  set output '../eps/conservation.eps'
  set size 0.7,0.6
  set border
  set grid
  set key out
  set key box
  set pointsize 0

  set xlabel 'Time t v_{ti}/L_n'
  set ylabel 'Entropy variables [n_0T_iv_{ti}{/Symbol r}_{ti}^2/L_n^3]'
  set xrange [*:*]
  set yrange [*:*]

  set output '../eps/conservation1.eps'
plot '../../adata/gkv.ent.001' u 1:2 ti 'S_i' w lp

  set output '../eps/conservation2.eps'
plot '../../adata/gkv.ent.001' u 1:3 ti 'S_e' w lp

  set output '../eps/conservation3.eps'
plot '../../adata/gkv.ent.001' u 1:4 ti 'W_E' w lp

  set output '../eps/conservation4.eps'
plot '../../adata/gkv.ent.001' u 1:5 ti 'W_M' w lp

  set output '../eps/conservation5.eps'
plot '../../adata/gkv.ent.001' u 1:($2+$3+$4+$5) ti 'Total' w lp

  set output '../eps/conservation6.eps'
plot '../../adata/gkv.ent.001' u 1:2 ti 'S_i' lw 3 w l, \
     '../../adata/gkv.ent.001' u 1:3 ti 'S_e' lw 3 w l, \
     '../../adata/gkv.ent.001' u 1:4 ti 'W_E' lw 3 w l, \
     '../../adata/gkv.ent.001' u 1:5 ti 'W_M' lw 3 w l, \
     '../../adata/gkv.ent.001' u 1:($2+$3+$4+$5) ti 'Total' lw 3 w l
#pause -1

#  set terminal x11
#  set output
#  replot
#  pause -1
#EOF
