#!/usr/local/bin/gnuplot
  set terminal postscript eps enhanced color 14
#  set output "./eps/entropybalance.eps"
  set size 0.7,0.6
  set border
  set grid
  set key out
  set key box width+1
  set pointsize 0

  set xlabel "Time t v_{ref}/L_n"
  set ylabel "Entropy variables [n_0T_iv_{ti}{/Symbol r}_{ti}^2/L_n^3]"
  set xrange [*:*]
  set yrange [*:*]

  set output "./eps/ionentropy.eps"
plot "../data/entropybalance.dat" u 1:2 ti "dS_i/dt" lw 3 w l, \
     "../data/entropybalance.dat" u 1:3 ti "dS_e/dt" lw 3 w l

  set output "../eps/fieldenergy.eps"
plot "../data/entropybalance.dat" u 1:4 ti "dW_E/dt" lw 3 w l, \
     "../data/entropybalance.dat" u 1:5 ti "dW_M/dt" lw 3 w l

  set output "../eps/p_flux.eps"
plot "../data/entropybalance.dat" u 1:6 ti "G_{iE}" lw 3 w l, \
     "../data/entropybalance.dat" u 1:7 ti "G_{eE}" lw 3 w l, \
     "../data/entropybalance.dat" u 1:8 ti "G_{iM}" lw 3 w l, \
     "../data/entropybalance.dat" u 1:9 ti "G_{eM}" lw 3 w l

  set output "../eps/h_flux.eps"
plot "../data/entropybalance.dat" u 1:10 ti "Q_{iE}" lw 3 w l, \
     "../data/entropybalance.dat" u 1:11 ti "Q_{eE}" lw 3 w l, \
     "../data/entropybalance.dat" u 1:12 ti "Q_{iM}" lw 3 w l, \
     "../data/entropybalance.dat" u 1:13 ti "Q_{eM}" lw 3 w l

  set output "../eps/c_disp.eps"
plot "../data/entropybalance.dat" u 1:14 ti "D_i" lw 3 w l, \
     "../data/entropybalance.dat" u 1:15 ti "D_e" lw 3 w l

  set output "../eps/a_disp.eps"
plot "../data/entropybalance.dat" u 1:16 ti "F_i" lw 3 w l, \
     "../data/entropybalance.dat" u 1:17 ti "F_e" lw 3 w l, \
     "../data/entropybalance.dat" u 1:18 ti "A_{iz}" lw 3 w l, \
     "../data/entropybalance.dat" u 1:19 ti "A_{ez}" lw 3 w l, \
     "../data/entropybalance.dat" u 1:20 ti "A_{iv}" lw 3 w l, \
     "../data/entropybalance.dat" u 1:21 ti "A_{ev}" lw 3 w l

  set output "../eps/balance.eps"
plot "../data/entropybalance.dat" u 1:($2+$3+$4+$5-$6-$7-$8-$9-$10-$11-$12-$13-$14-$15-$16-$17-$18-$19-$20-$21) ti "{/Symbol D}" lw 3 w l

  set output "../eps/entropybalance.eps"
plot "../data/entropybalance.dat" u 1:2 ti "dS_i/dt" lw 3 w l, \
     "../data/entropybalance.dat" u 1:3 ti "dS_e/dt" lw 3 w l, \
     "../data/entropybalance.dat" u 1:($4+$5) ti "dW/dt" lw 3 w l, \
     "../data/entropybalance.dat" u 1:($6+$8) ti "G_i" lw 3 w l, \
     "../data/entropybalance.dat" u 1:($7+$9) ti "G_e" lw 3 w l, \
     "../data/entropybalance.dat" u 1:($10+$12) ti "Q_i" lw 3 w l, \
     "../data/entropybalance.dat" u 1:($11+$13) ti "Q_e" lw 3 w l, \
     "../data/entropybalance.dat" u 1:($14) ti "D_i" lw 3 w l, \
     "../data/entropybalance.dat" u 1:($15) ti "D_e" lw 3 w l, \
     "../data/entropybalance.dat" u 1:($2+$3+$4+$5-$6-$7-$8-$9-$10-$11-$12-$13-$14-$15) ti "F_i+F_e+{/Symbol D}" lw 3 w l
#pause -1

#     "../data/entropybalance.dat" u 1:($14+$16+$18+$20) ti "Eff D_i" lw 3 w l, \
#     "../data/entropybalance.dat" u 1:($15+$17+$19+$21) ti "Eff D_e" lw 3 w l, \
#     "../data/entropybalance.dat" u 1:($2+$3+$4+$5-$6-$7-$8-$9-$10-$11-$12-$13-$14-$15-$16-$17-$18-$19-$20-$21) ti "{/Symbol D}" lw 3 w l

#  set terminal x11
#  set output
#  replot
#  pause -1
#EOF
