#!/usr/local/bin/gnuplot
  set terminal postscript eps enhanced color 14
  set output '../eps/Eky_lgrowth.eps'
  set size 0.6,0.6
  set border
  set grid
  set nokey
  set pointsize 0

  set xlabel 'Poloidal wavenumber k_y{/Symbol r}_{ti}'
  set ylabel 'Growthrate of {/Symbol f}_k [v_{ti}/L_n]'
  set xrange [*:*]
  set yrange [*:*]

plot '../data/Eky_lgrowth.dat' u 1:2 ti '' w lp

#  set terminal x11
#  set output
#  replot
#  pause -1
#EOF
